Chinese loc update 17/10/2024

--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -1,6 +1,6 @@
 ﻿l_simp_chinese:
- pc_pd_retinal: "视醛光合星球"
- pc_pd_retinal_desc: "拥有氮氧大气的岩石星球。水圈富有活力又相当稳定，大陆被海洋分隔。植物的演化基于视黄醛光合作用，而非叶绿素光合作用——这令星球呈现独特的紫色色调。"
+ pc_pd_retinal: "视黄醛星球"
+ pc_pd_retinal_desc: "拥有氮氧大气的岩石星球。水圈富有活力又相当稳定，大陆被海洋分隔。植物的光合作用基于视黄醛，而非叶绿素，因而星球呈现出一种独特的紫色。"
  pc_pd_retinal_adj: "紫色"
  mod_pc_pd_retinal_habitability: "陆地星球宜居性"
  trait_pc_pd_retinal_preference: "陆地星球偏好"
@@ -311,7 +311,7 @@
  mod_pc_pd_cold_desert_habitability: "极地星球宜居性"
  trait_pc_pd_cold_desert_preference: "极地星球偏好"
  trait_pc_pd_cold_desert_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_glacial: "冰川星球"
+ pc_pd_glacial: "冰河星球"
  pc_pd_glacial_desc: "拥有氮氧大气的寒冷冰封星球。每年的大部分时候，水体主要都是经久不化的冰川，不过夏季时节会有非常可观的冰雪融水。降雪非常普遍。地热活动在冰层中塑出长久存在的空洞，支撑起了厚冰之下丰富的海洋生命。"
  pc_pd_glacial_adj: "冰川"
  mod_pc_pd_glacial_habitability: "极地星球宜居性"
@@ -554,7 +554,7 @@
  pc_hydrocarbon: "烃星"
  pc_hydrocarbon_desc: "这是覆盖在厚厚的永冻冰和岩石物质之下的岩质星球。氮气、甲烷与乙烷的云层形成了致密的晦暗大气。液态碳氢化合物构成了这片荒芜之地中的海洋和湖泊。"
  pc_hothouse: "温室星球"
- pc_hothouse_desc: "这颗岩石星球的大气圈正在经历一场严重的温室效应，这里对任何生命都足以致命。"
+ pc_hothouse_desc: "这颗岩石星球的大气圈正在经历严重的温室效应，对任何生命都足以致命。"
  pc_ethane_ocean: "乙烷海洋星球"
  pc_ethane_ocean_desc: "这是大气层稀薄的岩石星球，对于任何高等生命都很致命。这里被包裹在一层液态乙烷海洋中。"
  pc_diamond: "金刚石星球"
@@ -573,37 +573,37 @@
  pc_dwarf_gas_giant_desc: "主要由氢气和氦气以及它们包围着的高密度核心所组成的行星。外面是厚厚的氢氦大气层，深处则是水冰，岩石，或者水与氨构成的液态海洋。"
  concept_pd_rare: "罕见星球"
  concept_pd_rares: "罕见星球"
- concept_pd_rares_desc: "—宜居度与其所属类型一致\n—自然生成概率很低\n—所带的星球修正会有若干特殊效果\n—拥有三种可用的独有建筑\n—拥有§Y星球塑形师§!飞升天赋后可以进行环境改造"
- pd_tooltip_minerals: "£job_miner£ $job_miner_plural$产出的£minerals£ §Y矿物§!"
- pd_tooltip_energy: "£job_technician£ $job_technician_plural$产出的£energy£ §Y$energy$§!"
- pd_tooltip_food: "£job_farmer£ $job_farmer_plural$产出的£food£ §Y$food$§!"
- pd_tooltip_consumer_goods: "£job_artisan£ $job_artisan_plural$产出的£consumer_goods£ §Y$consumer_goods$§!"
- pd_tooltip_alloys: "£job_foundry£ $job_foundry_plural$产出的£alloys£ §Y$alloys$§!"
+ concept_pd_rares_desc: "—宜居性与其所属星球类型一致\n—生成概率很低\n—所带的星球修正会有若干特殊效果\n—拥有三种可用的独有建筑\n—拥有§Y星球塑形师§!飞升天赋后可以进行环境改造"
+ pd_tooltip_minerals: "£job_miner£ $job_miner_plural$产出£minerals£ §Y矿物§!"
+ pd_tooltip_energy: "£job_technician£ $job_technician_plural$产出£energy£ §Y$energy$§!"
+ pd_tooltip_food: "£job_farmer£ $job_farmer_plural$产出£food£ §Y$food$§!"
+ pd_tooltip_consumer_goods: "£job_artisan£ $job_artisan_plural$产出£consumer_goods£ §Y$consumer_goods$§!"
+ pd_tooltip_alloys: "£job_foundry£ $job_foundry_plural$产出£alloys£ §Y$alloys$§!"
  pd_tooltip_culture: "提供更多£mod_job_culture_worker_add£ §Y$job_culture_worker_plural$§!岗位"
  pd_researcher_ending: "§Y研究点数§!（£job_researcher£ $job_researcher_plural$产出）"
- rare_building_warning: "可以建造以下三类建筑："
+ rare_building_warning: "可以从三种建筑中选择一种建造："
  pc_pd_megaflora_tooltip: "§Y巨树星球§!是一种['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+2§!\n—£district£ §Y$district_generator_plural$§!：§G+2§!\n—建筑与区划的花费：§R+20%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_energy$\n$t$—£society£ £engineering£ $pd_researcher_ending$"
  pc_pd_petrified_tooltip: "§Y木化石星球§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_consumer_goods$\n$t$—£society£ £engineering£ $pd_researcher_ending$"
  pc_pd_reef_tooltip: "§Y$pc_pd_reef$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_consumer_goods$\n$t$—£society£ £engineering£ $pd_researcher_ending$"
  pc_pd_archipelago_tooltip: "§Y$pc_pd_archipelago$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—建筑和区划维护费：§R+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_alloys$\n$t$—$pd_tooltip_food$\n$t$—$pd_tooltip_culture$"
  pc_pd_geothermal_tooltip: "§Y$pc_pd_geothermal$§!是有一种['concept_pd_rares']\n—£district£ §Y$district_generator_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_energy$\n$t$—$pd_tooltip_alloys$\n$t$—£engineering£ $pd_researcher_ending$"
  pc_pd_biolumen_tooltip: "§Y$pc_pd_biolumen$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—迁入吸引力：§G+25%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_food$\n$t$—£society£ $pd_researcher_ending$\n$t$—$pd_tooltip_culture$"
- pc_pd_salt_tooltip: "§Y$pc_pd_salt$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+6§!\n—£district£ §Y$district_farming_plural$§!：§R-2§!\n—宜居度：§R-20%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_alloys$\n$t$—£engineering£ $pd_researcher_ending$"
+ pc_pd_salt_tooltip: "§Y$pc_pd_salt$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+6§!\n—£district£ §Y$district_farming_plural$§!：§R-2§!\n—宜居性：§R-20%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_alloys$\n$t$—£engineering£ $pd_researcher_ending$"
  pc_pd_aquifer_tooltip: "§Y$pc_pd_aquifer$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—住房：§R-20%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_food$\n$t$—£society£ $pd_researcher_ending$\n$t$—$pd_tooltip_culture$"
- pc_pd_coral_tooltip: "§Y$pc_pd_coral$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—宜居度：§R-10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_consumer_goods$\n$t$—£society£ £engineering£ $pd_researcher_ending$\n$t$—$pd_tooltip_culture$"
+ pc_pd_coral_tooltip: "§Y$pc_pd_coral$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—宜居性：§R-10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_consumer_goods$\n$t$—£society£ £engineering£ $pd_researcher_ending$\n$t$—$pd_tooltip_culture$"
  pc_pd_primal_tooltip: "§Y$pc_pd_primal$§!是一类['concept_pd_rares']\n—£district£ §Y$district_generator_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—建筑和区划维护费：§R+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_alloys$\n$t$—$pd_tooltip_energy$\n$t$—$pd_tooltip_minerals$"
  pc_pd_supercontinent_tooltip: "§Y$pc_pd_supercontinent$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—住房：§R-10%§!\n—建筑和区划维护费：§R+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_food$\n$t$—$pd_tooltip_energy$\n$t$—£physics£ £engineering£ $pd_researcher_ending$"
- pc_pd_sinkhole_tooltip: "§Y$pc_pd_sinkhole$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—住房：§G+10%§!\n—建筑和区划维护费：§R+15%§!\n—建筑和区划维护费：§R+15%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_energy$\n$t$—£physics£ £engineering£ $pd_researcher_ending$"
- pc_pd_storm_tooltip: "§Y$pc_pd_storm$§!是一类['concept_pd_rares']\n—£district£ §Y$district_generator_plural$§!：§G+6§!\n—£district£ §Y$district_farming_plural$§!：§R+2§!\n—建筑和区划花费：§R+10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_consumer_goods$\n$t$—£engineering£ £society£ $pd_researcher_ending$"
+ pc_pd_sinkhole_tooltip: "§Y$pc_pd_sinkhole$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—住房：§G+10%§!\n—建筑和区划花费：§R+15%§!\n—建筑和区划维护费：§R+15%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_energy$\n$t$—£physics£ £engineering£ $pd_researcher_ending$"
+ pc_pd_storm_tooltip: "§Y$pc_pd_storm$§!是一类['concept_pd_rares']\n—£district£ §Y$district_generator_plural$§!：§G+6§!\n—£district£ §Y$district_farming_plural$§!：§R+2§!\n—建筑和区划花费：§R+10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_energy$\n$t$—£engineering£ £society£ $pd_researcher_ending$"
  pc_pd_iceberg_tooltip: "§Y$pc_pd_iceberg$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_alloys$\n$t$—$pd_tooltip_food$\n$t$—£society£ £physics£ $pd_researcher_ending$"
- pc_pd_glaciovolcanic_tooltip: "§Y$pc_pd_glaciovolcanic$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+2§!\n—£district£ §Y$district_generator_plural$§!：§G+2§!\n—宜居度：§R-10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_alloys$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_culture$"
+ pc_pd_glaciovolcanic_tooltip: "§Y$pc_pd_glaciovolcanic$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+2§!\n—£district£ §Y$district_generator_plural$§!：§G+2§!\n—宜居性：§R-10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_alloys$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_culture$"
  pc_pd_lanthanide_tooltip: "§Y$pc_pd_lanthanide$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—建筑和区划维护费：§R+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_consumer_goods$\n$t$—£physics£ £engineering£ $pd_researcher_ending$"
- pc_pd_cryoflora_tooltip: "§Y$pc_pd_cryoflora$§!是一类['concept_pd_rares']\n—£district£ §Y$district_generator_plural$§!：§G+4§!\n—宜居度：§R-20%§!\n—幸福度：§G+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_consumer_goods$\n$t$—£physics£ £society£ $pd_researcher_ending$\n$t$—$pd_tooltip_culture$"
- pc_pd_lichen_tooltip: "§Y$pc_pd_lichen$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+6§!\n—£district£ §Y$district_mining_plural$§!：§R-2§!\n—宜居度：§G+10%§!\n—建筑和区划维护费：§R+20%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_food$\n$t$—$pd_tooltip_energy$\n$t$—£society£ $pd_researcher_ending$"
- concept_pd_uncommon: "稀少星球"
- concept_pd_uncommons: "稀少星球"
- concept_pd_uncommons_desc: "—相较于常规星球，其宜居性更低\n—生成概率很低\n—有专门对应的改造候选星球\n—有特殊星球修正\n—有一些会随科技而升级的建筑\n—确保宜居星球会变更为改造候选星球"
- pc_pd_superhabitable_tooltip: "§Y超级类地星球§!是一类['concept_pd_uncommons']\n—星球规模介于§G31至35之间§!\n—会提供对应其他§Y超级类地星球§!的宜居性增益\n—只能§Y改造§!为其他类型的§Y超级类地星球§!\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—人口增长速度：§G+10%§!\n—建筑和区划花费：§R+25%§!\n—宜居性：§R-20%§!\n—$rare_building_warning$\n$t$—£society£ $pd_researcher_ending$\n$t$—$pd_tooltip_food$\n$t$—$pd_tooltip_alloys$"
+ pc_pd_cryoflora_tooltip: "§Y$pc_pd_cryoflora$§!是一类['concept_pd_rares']\n—£district£ §Y$district_generator_plural$§!：§G+4§!\n—宜居性：§R-20%§!\n—幸福度：§G+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_consumer_goods$\n$t$—£physics£ £society£ $pd_researcher_ending$\n$t$—$pd_tooltip_culture$"
+ pc_pd_lichen_tooltip: "§Y$pc_pd_lichen$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+6§!\n—£district£ §Y$district_mining_plural$§!：§R-2§!\n—宜居性：§G+10%§!\n—建筑和区划维护费：§R+20%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_food$\n$t$—$pd_tooltip_energy$\n$t$—£society£ $pd_researcher_ending$"
+ concept_pd_uncommon: "罕有星球"
+ concept_pd_uncommons: "罕有星球"
+ concept_pd_uncommons_desc: "—宜居性较常规星球更低\n—生成概率很低\n—有对应的特殊改造候选星球\n—有特殊星球修正\n—有会随科技而升级的建筑\n—确保宜居星球会变为改造候选星球"
+ pc_pd_superhabitable_tooltip: "§Y超级类地星球§!是一类['concept_pd_uncommons']\n—星球规模介于§G31-35§!之间\n—会提供对应其他§Y超级类地星球§!的宜居性增益\n—只能§Y改造§!为其他类型的§Y超级类地星球§!\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—人口增长速度：§G+10%§!\n—建筑和区划花费：§R+25%§!\n—宜居性：§R-20%§!\n—$rare_building_warning$\n$t$—£society£ $pd_researcher_ending$\n$t$—$pd_tooltip_food$\n$t$—$pd_tooltip_alloys$"
  pc_pd_tidally_locked_tooltip: "§Y超级锁定星球§!是一类['concept_pd_uncommons']\n—会提供对应其他§Y潮汐锁定星球§!的宜居性增益\n—只能§Y改造§!为其他类型的§Y潮汐锁定星球§!\n—£district£ §Y$district_generator_plural$§!：§G+4§!\n—最大区划数：§R-30%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_energy$\n$t$—$pd_tooltip_food$\n$t$—£physics£ £society£ $pd_researcher_ending$"
  pc_pd_cave_tooltip: "§Y岩洞星球§!是一类['concept_pd_uncommons']\n—会提供对应其他§Y岩洞星球§!的宜居性增益\n—只能§Y改造§!为其他类型的§Y岩洞星球§!\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—轨道轰炸伤害：§G-30%§!\n—岩石人口增长速度：§G+10%§!\n—生物人口增长速度：§R-10%§!\n—建筑和区划花费：§R+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_energy$\n$t$—$pd_tooltip_minerals$\n$t$—£engineering£ $pd_researcher_ending$"
  pc_nuked_relic: "遗落星球（死寂）"
