--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -1,8 +1,8 @@
 ﻿l_simp_chinese:
  pd_continental: "陆地世界"
  pd_continental_desc: "被海洋分割开的大陆，随经纬度不同有不同的季节温度。"
- pd_retinal: "视醛光合世界"
- pd_retinal_desc: "植物光合作用基于视黄醛，而不是叶绿素。令星球呈现独特的紫色色调。"
+ pd_retinal: "视黄醛世界"
+ pd_retinal_desc: "植物光合作用基于视黄醛，而不是叶绿素，因而星球呈现出一种独特的紫色。"
  pd_lake: "湖泊世界"
  pd_lake_desc: "整个星球是一片由无数大小各异的湖泊组成的“马赛克拼贴画”。"
  pd_forest: "森林世界"
@@ -117,7 +117,7 @@
  pd_arctic_desc: "极地范围很大，冰雪覆盖了大部分的表面，但仍然有四季变化，同时赤道地区也有植被。"
  pd_cold_desert: "寒漠世界"
  pd_cold_desert_desc: "降水稀少，地表罕有大型水域。即使在白天，平均温度也常常处于冰点以下。"
- pd_glacial: "冰川世界"
+ pd_glacial: "冰河世界"
  pd_glacial_desc: "每年的大部分时候，水体主要都是经久不化的冰川，不过夏季时节会有非常可观的冰雪融水。降雪非常普遍。"
  pd_antarctic: "冰原世界"
  pd_antarctic_desc: "冬季的风速可以达到25km/h以上，生命只能蜷缩在一些偏僻的地方，比如海冰下面，洞穴深处，或者能遮风挡雪的山谷里面。"
@@ -239,7 +239,7 @@
  pd_subglacial: "冰下世界"
  pd_subglacial_desc: "厚厚的冰层、极低的温度与稀薄的大气使得生命无法在地表生存。然而，潮汐加热和地热活动在坚冰下塑造出一片冰下海洋。"
  pd_hothouse: "温室世界"
- pd_hothouse_desc: "这颗星球的大气圈正在经历一场严重的温室效应，对任何生命都足以致命。"
+ pd_hothouse_desc: "这颗星球的大气圈正在经历严重的温室效应，对任何生命都足以致命。"
  decision_engineered_environment_gaia: "星球塑形师计划"
  decision_engineered_environment_gaia_desc: "我们会动用高级环境改造手段，将这颗星球塑造成一个天堂，创造出极其适宜高等生命的宜人环境。"
  engineered_environment_gaia: "完美塑形世界"
