--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_tree_of_life_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_tree_of_life_l_simp_chinese.yml
@@ -1,7 +1,7 @@
 ﻿l_simp_chinese:
  origin_pd_aw_tree_of_life: "巨型生命之树"
  origin_pd_aw_tree_of_life_desc: "这一蜂巢思维与一棵巨型树木间进化出了共生关系。巨树的根底拓展至星球的每个角落，生态系统因而改变，进而适应巨树与蜂群子个体的所需。若是没有巨树的支持，蜂群将很难生存下去。"
- origin_tooltip_pd_aw_tree_of_life_start_effects: "—$HOMEWORLD$$TABBED_NEW_LINE$—行星特征：['concept_tree_of_life']$TABBED_NEW_LINE$—星星修正：['concept_pd_aw_tree_of_life_modifier']$NEW_LINE$—一殖民星球：$TABBED_NEW_LINE$—行星特征：['concept_pd_aw_tree_of_life_sapling']$NEW_LINE$—没有§Y生命幼树§!的殖民地：$TABBED_NEW_LINE$—行星决议：['concept_transplant_pd_aw_tree_of_life']$NEW_LINE$—附庸殖民地的$AVAILABLE_HOLDINGS$['concept_pd_aw_tree_of_life_holding', £building£ $holding_tree_of_life_sapling$]"
+ origin_tooltip_pd_aw_tree_of_life_start_effects: "—$HOMEWORLD$$TABBED_NEW_LINE$—行星特征：['concept_tree_of_life']$TABBED_NEW_LINE$—星星修正：['concept_pd_aw_tree_of_life_modifier']$NEW_LINE$—已殖民星球：$TABBED_NEW_LINE$—行星特征：['concept_pd_aw_tree_of_life_sapling']$NEW_LINE$—没有§Y生命幼树§!的殖民地：$TABBED_NEW_LINE$—行星决议：['concept_transplant_pd_aw_tree_of_life']$NEW_LINE$—附庸殖民地的$AVAILABLE_HOLDINGS$['concept_pd_aw_tree_of_life_holding', £building£ $holding_tree_of_life_sapling$]"
  origin_tooltip_pd_aw_tree_of_life_start_negative_effects: "—无法对星球进行环境改造"
  concept_pd_aw_tree_of_life: "$d_tree_of_life_home$"
  concept_pd_aw_tree_of_life_desc: "—$MOD_POP_GROWTH_SPEED$：§G+15%§!\n—$mod_planet_jobs_society_research_produces_mult$：§G+10%§!\n—$MOD_PLANET_HOUSING_ADD$：§G+10%§!\n—$mod_district_farming_max$：§G+4§!\n—维护费：4 $i_food$\n\n§L$d_tree_of_life_home_desc$§!"
