--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
@@ -22,45 +22,45 @@
  climate_arctic: "极地"
  climate_alpine: "高山"
  climate_tundra: "苔原"
- building_megalfora_mine: "根系矿站（巨树星球）"
+ building_megalfora_mine: "根系开采设施（巨树星球）"
  building_megalfora_mine_desc: "这些巨树的庞大根系深深嵌入地壳中，使大量本来难于开采的矿脉得以暴露出来。"
  building_megalfora_lab: "研究实验室（巨树星球）"
  building_megalfora_lab_desc: "这些巨树以及周边的森林地带拥有独特的结构，其中蕴藏着许多值得研究的地方。"
- building_megalfora_grid: "树液提取站（巨树星球）"
+ building_megalfora_grid: "树液提取设施（巨树星球）"
  building_megalfora_grid_desc: "这些巨树的树液系统中蕴藏着丰富的能量。我们可以对此加以提取，这不仅不会对巨树本身造成不良影响，同时也能改善我们的能源生产。"
- building_petrified_mine: "开采中心（木化石星球）"
+ building_petrified_mine: "开采作业设施（木化石星球）"
  building_petrified_mine_desc: "星球上蕴藏着丰富的硅化木，因此矿物开采轻而易举。"
- building_petrified_guild: "木工工坊（木化石星球）"
+ building_petrified_guild: "木构加工设施（木化石星球）"
  building_petrified_guild_desc: "硅化木的罕见性质可以用于制作一些富有魅力的消费产品。"
  building_petrified_lab: "研究网络（木化石星球）"
  building_petrified_lab_desc: "这个星球有过剧烈变动的历史时期，因而蕴藏着丰富的研究机会。"
- building_reef_lab: "海洋研究所（珊瑚礁星球）"
+ building_reef_lab: "海洋研究设施（珊瑚礁星球）"
  building_reef_lab_desc: "独特的珊瑚礁结构，以及丰富的生态多样性，为研究人员带来了大量奇特的发现。"
  building_reef_guild: "工匠协会（珊瑚礁星球）"
  building_reef_guild_desc: "这些珊瑚礁可以用于制作新奇美丽的消费品。"
- building_reef_mine: "矿业财团（珊瑚礁星球）"
+ building_reef_mine: "矿业联盟（珊瑚礁星球）"
  building_reef_mine_desc: "珊瑚礁中蕴藏着丰富的矿物，可以提升矿物产量。"
  building_archipelago_foundry: "岩浆铸造厂（火山列岛星球）"
  building_archipelago_foundry_desc: "丰富的火山活动可以大幅提升冶金效率。"
- building_archipelago_farm: "火山农场（火山列岛星球）"
+ building_archipelago_farm: "火山农业设施（火山列岛星球）"
  building_archipelago_farm_desc: "丰富的火山土可以提升农业产量。"
  building_archipelago_resort: "海滩度假网络（火山列岛星球）"
  building_archipelago_resort_desc: "许多岛屿上都既安全又风景宜人，可以成为理想的度假地和疗养地。"
  building_biolumen_lab: "研究站（生物光星球）"
  building_biolumen_lab_desc: "发光的丛林实在是令人难以置信的独特生物群落，这是一座丰富的、还有待发掘的医学与工业宝库。"
- building_biolumen_resort: "行星度假地（生物光星球）"
+ building_biolumen_resort: "行星度假设施（生物光星球）"
  building_biolumen_resort_desc: "发光丛林真是美丽。在这片发光植物的暖光下，这些度假地可以为任何人提供他想要的任何东西。"
  building_biolumen_farm: "农业网络（生物光星球）"
  building_biolumen_farm_desc: "这里演化出了丰富多样的植物，农夫可以利用这些发光作物来提升农业生产的效率。"
  building_geothermal_grid: "电网（地热星球）"
  building_geothermal_grid_desc: "将这里的强力地热活动整合到电网当中，这可以提升技工的能量产出。"
- building_geothermal_foundry: "泥浆过滤站（地热星球）"
+ building_geothermal_foundry: "泥浆过滤设施（地热星球）"
  building_geothermal_foundry_desc: "地热活动产生的泥浆中蕴藏着罕见的宝贵资源，经过恰当的过滤处理后，滤出产物就可以送入冶金厂提升合金产量。"
  building_geothermal_lab: "工程部（地热星球）"
  building_geothermal_lab_desc: "高度活跃的地热活动加上极端温差，这意味着哪怕是常规的工程学问题，工程师也必须采用一些独特的应对方案。"
  building_salt_lab: "检测实验室（盐晶星球）"
  building_salt_lab_desc: "此地罕见的盐晶构造有许多潜在的工业用途和技术用途。对它们的研究有助于提升这里的研究水平。"
- building_salt_mine: "晶体开采中心（盐晶星球）"
+ building_salt_mine: "晶体开采设施（盐晶星球）"
  building_salt_mine_desc: "这些罕见的盐晶中可以很容易地找到并开采出稀有的珍贵矿物。"
  building_salt_foundry: "改良铸造厂（盐晶星球）"
  building_salt_foundry_desc: "这些稀有的盐晶中，有一部分可以用来改良加工合金的质与量。"
@@ -70,16 +70,16 @@
  building_aquifer_resort_desc: "游客们可以在这些度假区里享受来自畜水层的自然美景和丰富的凉爽淡水。"
  building_aquifer_lab: "岩洞实验室（畜水层星球）"
  building_aquifer_lab_desc: "这类实验室的目的是研究那些在地下蓄水层体系中发现的奇特生物。"
- mod_building_aquifer_lab_max: "$building_aquifer_lab$最大建造数量"
+ mod_building_aquifer_lab_max: "$building_aquifer_lab$最大数量"
  building_primal_foundry: "熔岩铸造厂（原始星球）"
  building_primal_foundry_desc: "这里的火山活动很易于开发，可以用于增进铸造厂的生产。"
  building_primal_grid: "电网（原始星球）"
  building_primal_grid_desc: "丰富的火山活动可以用于提升发电总量。"
- building_primal_mine: "熔岩管开采站（原始星球）"
+ building_primal_mine: "熔岩管开采设施（原始星球）"
  building_primal_mine_desc: "丰富的火山活动塑造出众多历史悠久的熔岩管道，它们联通了丰富的矿脉。"
- building_coral_resort: "珊瑚林度假地（陆珊瑚星球）"
+ building_coral_resort: "珊瑚林度假设施（陆珊瑚星球）"
  building_coral_resort_desc: "干旱的气候加上颜色鲜艳的珊瑚林——令人惊叹的度假胜地就此诞生。"
- building_coral_lab: "珊瑚林研究站（陆珊瑚星球）"
+ building_coral_lab: "珊瑚林研究部门（陆珊瑚星球）"
  building_coral_lab_desc: "奇特的陆珊瑚中蕴藏着许多生物学和工程学方面的秘密。"
  building_coral_guild: "工匠协会（陆珊瑚星球）"
  building_coral_guild_desc: "这里的陆珊瑚十分美丽，可以加工成各式各样的消费品。"
@@ -89,21 +89,21 @@
  building_supercon_lab_desc: "从动植物群落到板块构造的状态，这里提供了独特的研究机会。"
  building_supercon_grid: "电网（超大陆星球）"
  building_supercon_grid_desc: "遥远的内陆地带干燥而又开阔，是建立太阳能发电网络的完美之地。"
- building_pd_sinkhole_mine: "矿业财团（地陷星球）"
+ building_pd_sinkhole_mine: "矿业公会（地陷星球）"
  building_pd_sinkhole_mine_desc: "这些地陷提供了丰富的矿产开发机会。"
- building_pd_sinkhole_guild: "地下商品工厂（地陷星球）"
+ building_pd_sinkhole_guild: "地下商品生产设施（地陷星球）"
  building_pd_sinkhole_guild_desc: "这些岩洞与地陷中可以开采出珍贵材料。"
  building_pd_sinkhole_lab: "研究网络（地陷星球）"
  building_pd_sinkhole_lab_desc: "这些地陷是一些奇特生命的家园，同时也产生了诸多工程学挑战。"
  building_storm_lab: "气象实验室（风暴星球）"
  building_storm_lab_desc: "得益于这里的极端天气，人们可以开展针对新型工程技术和气象条件分析的实践研究。"
- building_storm_grid: "风能网络（风暴星球）"
+ building_storm_grid: "风力发电网络（风暴星球）"
  building_storm_grid_desc: "这里的极端风暴可以增加星球电网的能源产出。"
- building_storm_mine: "裂缝矿场（风暴星球）"
+ building_storm_mine: "裂缝开采设施（风暴星球）"
  building_storm_mine_desc: "这里的极端天气会导致地表的一些部分爆裂开来，暴露出许多易于开采的矿物。"
  building_iceberg_lab: "研究实验室网络（冰山星球）"
  building_iceberg_lab_desc: "长存的冰山成为了工程学研究与生物学研究的独特平台。"
- building_iceberg_farm: "巨藻农场（冰山星球）"
+ building_iceberg_farm: "巨藻农业设施（冰山星球）"
  building_iceberg_farm_desc: "这里的巨藻数量何其丰富，任何形式的农业活动都能相当高产。"
  building_iceberg_foundry: "铸造厂（冰山星球）"
  building_iceberg_foundry_desc: "冰冷的海水和丰富的盐分可以增进合金生产。"
@@ -112,39 +112,39 @@
  building_cryo_guild: "工匠协会（冰雪植物星球）"
  building_cryo_guild_desc: "这些低温蛋白有许多工业用途，可以被工匠拿来制作令人惊叹的奇特产品。"
  mod_planet_artisans_unity_produces_add: "[GetArtisanIcon][GetArtisanPlural]产生的£unity£$unity$"
- building_cryo_grid: "低温蛋白应用网（冰雪植物星球）"
+ building_cryo_grid: "低温蛋白应用网络（冰雪植物星球）"
  building_cryo_grid_desc: "在这里，我们会对冰雪植物中的罕见蛋白进行加工，增进能量生产。"
- building_lichen_farm: "农业系统（地衣星球）"
+ building_lichen_farm: "农业设施（地衣星球）"
  building_lichen_farm_desc: "这些农场利用此地的地衣来提高产量。"
  building_lichen_grid: "生物反应堆（地衣星球）"
  building_lichen_grid_desc: "向生物反应堆额外添加一些地衣，可以增进能源生产。"
  building_lichen_lab: "研究中心（地衣星球）"
  building_lichen_lab_desc: "这些研究设施在钻研地衣林中的独特生物多样性，同时也在发掘其工业用途。"
- building_cryo_resort: "度假胜地（冰雪植物星球）"
+ building_cryo_resort: "度假设施（冰雪植物星球）"
  building_cryo_resort_desc: "坐落于丰饶且美丽的冰雪植物丛林周遭的巨大度假地吸引了来自星球各地的游客。"
  building_glacio_foundry: "熔岩铸造厂（冰川火山星球）"
  building_glacio_foundry_desc: "这类特殊铸造厂会泵出源自火山的丰富能量，将之用于增进合金生产当中。"
- building_glacio_resort: "热泉度假地（冰川火山星球）"
+ building_glacio_resort: "温泉度假设施（冰川火山星球）"
  building_glacio_resort_desc: "这些度假设施充分利用了此地发现的丰富热泉。"
- building_glacio_mine: "熔岩管开采站（冰川火山星球）"
+ building_glacio_mine: "熔岩管开采设施（冰川火山星球）"
  building_glacio_mine_desc: "这些处于休眠中的熔岩管道很容易进行矿物开采。"
- building_lanthanide_guild: "消费品工坊（镧星）"
+ building_lanthanide_guild: "消费品加工设施（镧星）"
  building_lanthanide_guild_desc: "这些工匠使用储量丰富的罕见镧系金属，制作出了独特的消费品。"
  building_lanthanide_lab: "研究网络（镧星）"
  building_lanthanide_lab_desc: "由监测站和实验室构成的系统，可以发掘出镧系金属的新颖用途。"
- building_lanthanide_mine: "开采场（镧星）"
+ building_lanthanide_mine: "矿藏开采设施（镧星）"
  building_lanthanide_mine_desc: "丰富的镧系金属储量意味着这里矿物产量很高。"
- building_wet_td_farm: "农业设施（潮汐锁定星球）"
+ building_wet_td_farm: "农业综合设施（潮汐锁定星球）"
  building_wet_td_farm_desc: "恒定的光照使得农业生产极其高效。"
- building_wet_td_grid: "可再生能源网（潮汐锁定星球）"
+ building_wet_td_grid: "可再生能源设施（潮汐锁定星球）"
  building_wet_td_grid_desc: "恒久的阳光和风力使得能源生产极其高效。"
  building_wet_td_bio_lab: "生物研究实验室（潮汐锁定星球）"
  building_wet_td_bio_lab_desc: "这颗星球的每一片区域都是一处相当独特的环境，其中的动植物以奇特而新颖的方式发生了分化。"
- building_karst_grid: "地热开采站（岩洞星球）"
+ building_karst_grid: "地热开采设施（岩洞星球）"
  building_karst_grid_desc: "深层的岩洞带来了易于开发的丰富地热能，可以增进该星球的能源生产。"
  building_karst_lab: "工程协会（岩洞星球）"
  building_karst_lab_desc: "在地下建造都市是一项了不起的壮举。工程协会负责在当地的研究人员之间进行协调，提升此地的工程学水平。"
- building_karst_mine: "矿业财团（岩洞星球）"
+ building_karst_mine: "矿业联盟（岩洞星球）"
  building_karst_mine_desc: "深层的岩洞带来了易于开发的丰饶矿脉，可以提升此星球的矿物产量。"
  building_superhab_lab: "演化实验室（超级类地星球）"
  building_superhab_lab_desc: "超级类地星球虽然不是所有生物的理想家园，却是完美的生命演化摇篮。新的科学发现的出现频率使得全星球范围内的社会学研究水平都有所提升。"
@@ -154,9 +154,9 @@
  building_superhab_foundry_desc: "在强重力环境中制造合金，也就意味着生产高质量的致密合金变得更为容易。"
  building_gaia_lab: "研究中心（盖亚星球）"
  building_gaia_lab_desc: "在这个研究中心中，研究人员会对此地的理想环境进行调控和维持，这样经常带来一些千载难逢的研究机会。"
- building_gaia_unity_admin: "行政协调局（盖亚星球）"
- building_gaia_unity_admin_desc: "壮丽的园林景致、富有田园情调的公共区域，这都为迷宫般错综复杂的协调办公室增光添彩，显著提升了星球官僚的行政效率。"
- building_gaia_unity_temple: "教会协调局（盖亚星球）"
+ building_gaia_unity_admin: "行政协调部门（盖亚星球）"
+ building_gaia_unity_admin_desc: "壮丽的园林景致、富有田园情调的公共区域，都为迷宫般错综复杂的协调办公室增光添彩，显著提升了星球官僚的行政效率。"
+ building_gaia_unity_temple: "教会协调部门（盖亚星球）"
  building_gaia_unity_temple_desc: "壮丽的圣堂事务建筑掩映在恬静的自然风光当中。这番瑰丽的园林之景，会让造访此地的每一位圣职都容光焕发，精神抖擞。"
  building_gaia_unity_robot: "协调中枢（盖亚星球）"
  building_gaia_unity_robot_desc: "此地宜人的气温，辅以气象调控系统，可以提升这里的协调者的运算效能。"
