--- a/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
+++ b/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
@@ -160,13 +160,13 @@
  tech_acean_medical_center: "艾森水晶医学理论"
  tech_acean_medical_center_desc: "艾森水晶对有机体有促进发育和治愈的效果。我们可以建造内部嵌满艾森水晶的高科技医疗中心，这能大幅提升治疗效果。"
  building_pd_acean_medical_center: "艾森水晶医疗中心"
- building_pd_acean_medical_center_desc: "这种高科技的医疗中心内部嵌满了艾森水晶，能够大幅治疗效果，及开展各类前沿医疗研究。"
+ building_pd_acean_medical_center_desc: "这种高科技的医疗中心内部嵌满了艾森水晶，能够大幅改善医治效果，亦可开展各类前沿医疗研究。"
  tech_acean_gestation_pools: "艾森水晶妊娠理论"
  tech_acean_gestation_pools_desc: "镶嵌艾森水晶是一种潜力巨大的措施，可以缩短新子个体繁衍所需的妊娠周期。"
  building_pd_acean_gestation_chamber: "艾森水晶妊娠舱"
  building_pd_acean_gestation_chamber_desc: "在孵化舱中嵌入艾森水晶，可以大幅缩短子个体的妊娠时间。"
  tech_acean_resonators: "艾森水晶电子谐振器"
- tech_acean_resonators_desc: "艾森水晶的谐振主要影响有机系统，但其独特的频率在机械系统中也有许多潜在应用。"
+ tech_acean_resonators_desc: "艾森水晶的谐振主要影响有机系统，不过其独特的频率在机械系统中也有许多潜在应用。"
  tech_acean_resonators_tt_desc: "§H解锁特质：§!$trait_pd_acean_resonators$"
  trait_pd_acean_resonators: "艾森水晶电子谐振器"
  trait_pd_acean_resonators_desc: "将艾森水晶整合到装配模式中，我们可以确保更快、更高效的系统构筑。"
