--- a/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
@@ -306,6 +306,12 @@ trait_pc_pd_sandstone_preference_desc: "$trait_pc_arctic_preference_desc$"
  mod_pc_pd_turquoise_habitability: "Savannah Habitability"
  trait_pc_pd_turquoise_preference: "Savannah Preference"
  trait_pc_pd_turquoise_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_calcite: "Calcite World"
+ pc_pd_calcite_desc: "This savannah planet is dotted with towering, spiky calcite rock formations. The calcite enriches the soil, creating ideal conditions for grasses and other flora."
+ pc_pd_calcite_adj: "sharded"
+ mod_pc_pd_calcite_habitability: "Savannah Habitability"
+ trait_pc_pd_calcite_preference: "Savannah Preference"
+ trait_pc_pd_calcite_preference_desc: "$trait_pc_arctic_preference_desc$"
 pc_pd_supercontinent: "Monde Supercontinent"
 pc_pd_supercontinent_desc: "Monde rocheux de prairies et de déserts avec une atmosphère à base d'azote et d'oxygène, les plaques tectoniques de cette planète se trouvent actuellement dans l'état d'un supercontinent. Les zones côtières immédiates sont luxuriantes, mais une grande partie du terrain intérieur est constituée de prairies qui se transforment lentement en grands déserts arides."
 pc_pd_supercontinent_adj: "supercontinental"
@@ -452,6 +458,12 @@ pc_pd_tuya_adj: "gelé"
 mod_pc_pd_tuya_habitability: "Habitabilité de la Toundra"
 trait_pc_pd_tuya_preference: "Préférence Toundra"
 trait_pc_pd_tuya_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_cryovolcano: "Cryovolcano World"
+ pc_pd_cryovolcano_desc: "A frigid, rocky planet with a nitrogen-oxygen atmosphere. Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
+ pc_pd_cryovolcano_adj: "cryovolcanic"
+ mod_pc_pd_cryovolcano_habitability: "Tundra Habitability"
+ trait_pc_pd_cryovolcano_preference: "Tundra Preference"
+ trait_pc_pd_cryovolcano_preference_desc: "$trait_pc_arctic_preference_desc$"
 pc_pd_cryoflora: "Monde de Cryoflore"
 pc_pd_cryoflora_desc: "Monde froid et rocheux avec une atmosphère azote-oxygène. Bien que les températures soient souvent en dessous de zéro, la majeure partie de l'hydrosphère est verrouillée dans la neige et la glace. Malgré cela, la flore et la faune de cette planète se sont adaptées grâce à des protéines antigel pour créer un écosystème luxuriant et vibrant."
 pc_pd_cryoflora_adj: "lumineux"
