--- a/planetary_diversity/localisation/french/planetarydiversity_planet_modifiers_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_modifiers_l_french.yml
@@ -123,6 +123,8 @@ pd_primal_desc: "L'activité volcanique de ce jeune monde a ralenti, donnant nai
  pd_sandstone_desc: "$pc_pd_sandstone_desc$"
  pd_turquoise: "$pc_pd_turquoise$"
  pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
+ pd_calcite: "$pc_pd_calcite$"
+ pd_calcite_desc: "$pc_pd_calcite_desc$"
  pd_supercontinent: "Monde Supercontinent"
  pd_supercontinent_desc: "Les plaques tectoniques de cette planète se trouvent actuellement dans un état de supercontinent. Les zones côtières immédiates sont luxuriantes, mais une grande partie du terrain intérieur est composée de prairies qui se transforment lentement en grands déserts arides."
  pd_sinkhole: "Monde de Gouffres"
