--- a/planetary_diversity/localisation/german/planetarydiversity_engine_events_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_engine_events_l_german.yml
@@ -1,8 +1,8 @@
 ﻿l_german:
 
 ###Terraforming Event
- pdengine.21.name: "Terraforming Complete"
- pdengine.21.desc: "As we finish terraforming §Y[From.GetName]§! we have the opportunity to choose the new biome of this world."
+ pdengine.21.name: "Terraforming abgeschlossen"
+ pdengine.21.desc: "Nach abschluß des terraformings von §Y[From.GetName]§! haben wir die Möglichkeit, das neue Biom dieser Welt auszuwählen."
  pdengine.21.continental: "$pc_continental$"
  pdengine.21.retinal: "$pc_pd_retinal$"
  pdengine.21.lake: "$pc_pd_lake$"
@@ -57,6 +57,7 @@
  pdengine.21.aspen: "$pc_pd_aspen$"
  pdengine.21.sandstone: "$pc_pd_sandstone$"
  pdengine.21.turquoise: "$pc_pd_turquoise$"
+ pdengine.21.calcite: "$pc_pd_calcite$"
  pdengine.21.prairie: "$pc_pd_prairie$"
  pdengine.21.supercontinent: "$pc_pd_supercontinent$"
  pdengine.21.sinkhole: "$pc_pd_sinkhole$"
@@ -85,19 +86,20 @@
  pdengine.21.mud: "$pc_pd_mud$"
  pdengine.21.basalt: "$pc_pd_basalt$"
  pdengine.21.tuya: "$pc_pd_tuya$"
+ pdengine.21.cryovolcano: "$pc_pd_cryovolcano$"
  pdengine.21.cryoflora: "$pc_pd_cryoflora$"
  pdengine.21.lichen: "$pc_pd_lichen$"
 
 ###Gaia Terraforming Event
- pdengine.24.name: "Gaia Terraforming Complete"
- pdengine.24.desc: "As we finish terraforming §Y[Root.GetName]§! we have the opportunity to choose the new biome of this ideal world."
+ pdengine.24.name: "Gaia-Terraforming abgeschlossen"
+ pdengine.24.desc: "Nach abschluß des terraformings von §Y[Root.GetName]§! haben wir die Möglichkeit, das neue Biom dieser idealen Welt auszuwählen."
  pdengine.24.wet_gaia: "$pc_pd_wet_gaia$"
  pdengine.24.dry_gaia: "$pc_pd_dry_gaia$"
  pdengine.24.cold_gaia: "$pc_pd_cold_gaia$"
 
 ###Life Seeded Choice Event
  pdengine.90.name: "$civic_life_seeded$ Biome"
- pdengine.90.desc: "Our people evolved on this paradise of a planet we call §Y[Capital_scope.GetName]§!. What biome is our homeworld?"
+ pdengine.90.desc: "Unser Volk hat sich auf diesem paradiesischen Planeten entwickelt, den wir §Y[Capital_scope.GetName]§! nennen. Welches Biom dominiert unsere Heimatwelt?"
  pdengine.90.wet_gaia: "$pc_pd_wet_gaia$"
  pdengine.90.dry_gaia: "$pc_pd_dry_gaia$"
  pdengine.90.cold_gaia: "$pc_pd_cold_gaia$"
@@ -106,14 +108,14 @@
  pdengine.90.tidally_locked_gaia: "$pc_pd_gaia_tidally_locked$"
 
 ###Uncommon Gaia Terraforming Event
- pdengine.96.name: "Gaia Terraforming Complete"
- pdengine.96.desc: "As we finish terraforming §Y[From.GetName]§! we have the opportunity to choose the new biome of this ideal world."
- pdengine.96.wet_gaia_cave: "Wet Climate"
- pdengine.96.dry_gaia_cave: "Dry Climate"
- pdengine.96.cold_gaia_cave: "Cold Climate"
- pdengine.96.wet_gaia_superhabitable: "Wet Climate"
- pdengine.96.dry_gaia_superhabitable: "Dry Climate"
- pdengine.96.cold_gaia_superhabitable: "Cold Climate"
- pdengine.96.wet_gaia_tidally_locked: "Wet Climate"
- pdengine.96.dry_gaia_tidally_locked: "Dry Climate"
- pdengine.96.cold_gaia_tidally_locked: "Cold Climate"
+ pdengine.96.name: "Gaia-Terraforming abgeschlossen"
+ pdengine.96.desc: "Nach abschluß des terraformings von §Y[From.GetName]§! haben wir die Möglichkeit, das neue Biom dieser idealen Welt auszuwählen."
+ pdengine.96.wet_gaia_cave: "Feuchtes Klima"
+ pdengine.96.dry_gaia_cave: "Trockenes Klima"
+ pdengine.96.cold_gaia_cave: "Kaltes Klima"
+ pdengine.96.wet_gaia_superhabitable: "Feuchtes Klima"
+ pdengine.96.dry_gaia_superhabitable: "Trockenes Klima"
+ pdengine.96.cold_gaia_superhabitable: "Kaltes Klima"
+ pdengine.96.wet_gaia_tidally_locked: "Feuchtes Klima"
+ pdengine.96.dry_gaia_tidally_locked: "Trockenes Klima"
+ pdengine.96.cold_gaia_tidally_locked: "Kaltes Klima"
