--- a/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
@@ -122,6 +122,8 @@
  pd_sandstone_desc: "Dieser Planet verfügt über ausgedehnte Graslandschaften und windgeformte Sandsteinformationen. Seine Hydrosphäre beherbergt widerstandsfähige Gräser, die an diese Umgebung angepasst sind."
  pd_turquoise: "$pc_pd_turquoise$"
  pd_turquoise_desc: "Dieser subtropische Graslandplanet ist übersät mit riesigen Vorkommen türkisfarbener Edelsteine, die fast überall auf seiner Oberfläche zu finden sind."
+ pd_calcite: "$pc_pd_calcite$"
+ pd_calcite_desc: "$pc_pd_calcite_desc$"
  pd_supercontinent: "Superkontinent Welt"
  pd_supercontinent_desc: "Aufgrund der Plattentektonik besteht auf diesem Planeten derzeit ein Superkontinent. Die Küstengebiete sind üppig bewachsen, während das Land im Landesinneren von Grasland zu großen, trockenen Wüsten übergeht."
  pd_sinkhole: "Senkloch Welt"
@@ -182,6 +184,8 @@
  pd_basalt_desc: "Auf diesem Planeten herrschen gleichmäßige Jahreszeiten vor. Durch periodische vulkanische Aktivitäten entstehen ausgedehnte Lavafelder. Moose und Flechten, die auf dem abgekühlten Basalt gedeihen, erhalten die Biosphäre."
  pd_tuya: "Tuya Welt"
  pd_tuya_desc: "Da es nur wenige Jahreszeiten und strenge Winter gibt, lebt die stabile Biosphäre dieser Welt von Nährstoffen aus vulkanischen Böden. Die Oberfläche ist übersät mit subglazialen Vulkanen."
+ pd_cryovolcano: "Cryovolcano World"
+ pd_cryovolcano_desc: "Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
  pd_cryoflora: "Kryflora Welt"
  pd_cryoflora_desc: "Die Hydrosphäre des Planeten ist größtenteils gefroren und die Temperaturen steigen selten über den Gefrierpunkt. Dennoch haben sich Flora und Fauna mit Frostschutzproteinen angepasst und so ein wunderschönes leuchtendes Ökosystem geschaffen."
  pd_lichen: "Flechtenwelt"
