--- a/planetary_diversity/localisation/german/planetarydiversity_start_screen_message_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_start_screen_message_l_german.yml
@@ -1,13 +1,10 @@
 ﻿l_german:
 
-START_SCREEN_PART_ONE_WET_SUPERHABITABLE: "Seitdem sich in den Äonen die ersten primitiven [GetSpeciesName]-Gemeinschaften in den üppigen Dschungeln und seichten Meeren von [GetHomeWorldName] gebildet haben, hat sich unsere Zivilisation ausgebreitet und gediehen."
-
-START_SCREEN_PART_ONE_DRY_SUPERHABITABLE: "Seitdem sich in den Äonen die ersten primitiven [GetSpeciesName]-Gemeinschaften in den üppigen Flusstälern [GetHomeWorldName] gebildet haben, hat sich unsere Zivilisation ausgebreitet und gediehen."
-
-START_SCREEN_PART_ONE_COLD_SUPERHABITABLE: "Seitdem sich in den Äonen die ersten primitiven [GetSpeciesName]-Gemeinschaften in den üppigen borealen Wäldern [GetHomeWorldName] gebildet haben, hat sich unsere Zivilisation ausgebreitet und gediehen."
-START_SCREEN_PART_ONE_WET_TIDALLY_LOCKED: "In den Äonen, seit die ersten primitiven [GetSpeciesName]-Gemeinschaften in den schattigen Wäldern unter der ständigen Sonne von [GetHomeWorldName] Gestalt annahmen, hat sich unsere Zivilisation ausgebreitet und gediehen."
-START_SCREEN_PART_ONE_DRY_TIDALLY_LOCKED: "In den Äonen, seit die ersten primitiven [GetSpeciesName]-Gemeinschaften in der Dämmerungszone von [GetHomeWorldName] Gestalt annahmen, hat sich unsere Zivilisation ausgebreitet und gediehen."
-START_SCREEN_PART_ONE_COLD_TIDALLY_LOCKED: "In den Äonen, seit die ersten primitiven [GetSpeciesName]-Gemeinschaften an der gefrorenen Dämmerungsküste von [GetHomeWorldName] Gestalt annahmen, hat sich unsere Zivilisation ausgebreitet und gediehen."
-START_SCREEN_PART_ONE_WET_CAVE: "In den Äonen, seit die ersten primitiven [GetSpeciesName]-Gemeinschaften in den großen, üppigen Höhlen von [GetHomeWorldName] Gestalt annahmen, hat sich unsere Zivilisation ausgebreitet und gediehen."
-START_SCREEN_PART_ONE_DRY_CAVE: "In den Äonen, seit die ersten primitiven [GetSpeciesName]-Gemeinschaften in den Sandsteinhöhlen von [GetHomeWorldName] Gestalt annahmen, hat sich unsere Zivilisation ausgebreitet und gediehen."
-START_SCREEN_PART_ONE_COLD_CAVE: "In den Äonen, seit die ersten primitiven [GetSpeciesName]-Gemeinschaften in den eisgefüllten Höhlen von [GetHomeWorldName] Gestalt annahmen, hat sich unsere Zivilisation ausgebreitet und gediehen."
+ START_SCREEN_PART_ONE_WET_SUPERHABITABLE: "In den Äonen, seitdem sich die ersten primitiven [GetSpeciesName] Gemeinschaften in den üppigen Dschungeln und seichten Meeren von [GetHomeWorldName] gebildet haben, hat sich unsere Zivilisation ausgebreitet und gedieh."
+ START_SCREEN_PART_ONE_DRY_SUPERHABITABLE: "In den Äonen, seitdem sich die ersten primitiven [GetSpeciesName] Gemeinschaften in den üppigen Flusstälern von [GetHomeWorldName] gebildet haben, hat sich unsere Zivilisation ausgebreitet und gedieh."
+ START_SCREEN_PART_ONE_COLD_SUPERHABITABLE: "In den Äonen, seitdem sich die ersten primitiven [GetSpeciesName] Gemeinschaften in den üppigen borealen Wäldern von [GetHomeWorldName] gebildet haben, hat sich unsere Zivilisation ausgebreitet und gedieh."
+ START_SCREEN_PART_ONE_WET_TIDALLY_LOCKED: "In den Äonen, seitdem sich die ersten primitiven [GetSpeciesName] Gemeinschaften in den schattigen Wäldern unter der ständigen Sonne von [GetHomeWorldName] gebildet haben, hat sich unsere Zivilisation ausgebreitet und gedieh."
+ START_SCREEN_PART_ONE_DRY_TIDALLY_LOCKED: "In den Äonen, seitdem sich die ersten primitiven [GetSpeciesName] Gemeinschaften an der gefrorenen Dämmerungsküste von [GetHomeWorldName] gebildet haben, hat sich unsere Zivilisation ausgebreitet und gedieh."
+ START_SCREEN_PART_ONE_WET_CAVE: "In den Äonen, seitdem sich die ersten primitiven [GetSpeciesName] Gemeinschaften in den großen, üppigen Höhlen von [GetHomeWorldName] gebildet haben, hat sich unsere Zivilisation ausgebreitet und gedieh."
+ START_SCREEN_PART_ONE_DRY_CAVE: "In den Äonen, seitdem sich die ersten primitiven [GetSpeciesName] Gemeinschaften in den Sandsteinhöhlen von [GetHomeWorldName] gebildet haben, hat sich unsere Zivilisation ausgebreitet und gedieh."
+ START_SCREEN_PART_ONE_COLD_CAVE: "In den Äonen, seitdem sich die ersten primitiven [GetSpeciesName] Gemeinschaften in den eisgefüllten Höhlen von [GetHomeWorldName] gebildet haben, hat sich unsere Zivilisation ausgebreitet und gedieh."
