--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
@@ -122,6 +122,8 @@
  pd_sandstone_desc: "이 행성은 광활한 초원과 바람에 깎인 사암 지형을 자랑합니다. 이 행성의 수권은 이러한 환경에서 잘 자라도록 적응한 탄력적인 풀을 지원합니다."
  pd_turquoise: "$pc_pd_turquoise$"
  pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
+ pd_calcite: "$pc_pd_calcite$"
+ pd_calcite_desc: "$pc_pd_calcite_desc$"
  pd_supercontinent: "초대륙 행성"
  pd_supercontinent_desc: "이 행성은 현재 판구조론으로 인해 초대륙을 형성하고 있습니다. 해안 지역은 울창한 반면 내륙 지형은 초원에서 거대한 건조 사막으로 전환됩니다."
  pd_sinkhole: "싱크홀 행성"
@@ -182,6 +184,8 @@
  pd_basalt_desc: "간헐적인 화산 활동으로 광활한 용암 지대가 형성되는 이 행성에는 일정한 계절이 존재합니다. 냉각된 현무암에서 번성하는 이끼와 이끼류가 생물권을 유지합니다."
  pd_tuya: "평정화산 행성"
  pd_tuya_desc: "계절이 한정되어 있고 겨울이 혹독한 이 행성의 안정적인 생물권은 화산 토양 영양분으로 번성하며 빙하 아래 화산이 지상에 산재해 있습니다."
+ pd_cryovolcano: "Cryovolcano World"
+ pd_cryovolcano_desc: "Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
  pd_cryoflora: "얼음꽃 행성"
  pd_cryoflora_desc: "행성의 수권은 대부분 얼어붙어 있으며 기온이 영하로 올라가는 일이 거의 없습니다. 그럼에도 불구하고 동식물은 부동액 단백질로 적응하여 아름답게 빛나는 생태계를 만들어 냈습니다."
  pd_lichen: "이끼 행성"
