--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
@@ -122,6 +122,8 @@
  pd_sandstone_desc: "Na tej planecie znajdują się rozległe łąki i formacje piaskowca wyrzeźbione przez wiatr. Jego hydrosfera wspiera odporne trawy przystosowane do rozwoju w tym środowisku."
  pd_turquoise: "$pc_pd_turquoise$"
  pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
+ pd_calcite: "$pc_pd_calcite$"
+ pd_calcite_desc: "$pc_pd_calcite_desc$"
  pd_supercontinent: "Świat superkontynentalny"
  pd_supercontinent_desc: "Ta planeta ma obecnie superkontynent ze względu na tektonikę płyt. Obszary przybrzeżne są bujne, podczas gdy teren śródlądowy przechodzi z łąk w duże, jałowe pustynie."
  pd_sinkhole: "Świat zapadliskowy"
@@ -182,6 +184,8 @@
  pd_basalt_desc: "Na tej planecie panują stałe pory roku, gdzie sporadyczna aktywność wulkaniczna tworzy rozległe pola lawy. Mchy i porosty rosnące na schłodzonym bazalcie podtrzymują biosferę."
  pd_tuya: "Świat wulkaniczny"
  pd_tuya_desc: "Dzięki ograniczonym porom roku i surowym zimom stabilna biosfera tego świata żyje na składnikach odżywczych z gleby wulkanicznej, a na powierzchni znajdują się subglacjalne wulkany."
+ pd_cryovolcano: "Cryovolcano World"
+ pd_cryovolcano_desc: "Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
  pd_cryoflora: "Świat kryształowy"
  pd_cryoflora_desc: "Hydrosfera planety jest w większości zamarznięta, a temperatury rzadko przekraczają granicę zera. Niemniej jednak flora i fauna przystosowały się do białek zapobiegających zamarzaniu, tworząc piękny, świecący ekosystem."
  pd_lichen: "Świat porostowy"
