--- a/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
@@ -305,6 +305,12 @@
  mod_pc_pd_turquoise_habitability: "Приспособленность к мирам саванны"
  trait_pc_pd_turquoise_preference: "Предпочтение миров саванны"
  trait_pc_pd_turquoise_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_calcite: "Calcite World"
+ pc_pd_calcite_desc: "This savannah planet is dotted with towering, spiky calcite rock formations. The calcite enriches the soil, creating ideal conditions for grasses and other flora."
+ pc_pd_calcite_adj: "sharded"
+ mod_pc_pd_calcite_habitability: "Savannah Habitability"
+ trait_pc_pd_calcite_preference: "Savannah Preference"
+ trait_pc_pd_calcite_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_supercontinent: "Суперконтинентальный мир"
  pc_pd_supercontinent_desc: "Каменистый мир с преобладанием лугов и сухих пустошей с азотно-кислородной атмосферой. В настоящее время тектонические плиты этой планеты образуют суперконтинент. Прибрежные земли полны пышной растительности, но большая часть внутренней местности представляет собой луга, которые постепенно переходят в большие засушливые пустыни."
  pc_pd_supercontinent_adj: "суперконтинентальная"
@@ -455,6 +461,12 @@
  mod_pc_pd_tuya_habitability: "Приспособленность к тундровым мирам"
  trait_pc_pd_tuya_preference: "Предпочтение тундровых миров"
  trait_pc_pd_tuya_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_cryovolcano: "Cryovolcano World"
+ pc_pd_cryovolcano_desc: "A frigid, rocky planet with a nitrogen-oxygen atmosphere. Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
+ pc_pd_cryovolcano_adj: "cryovolcanic"
+ mod_pc_pd_cryovolcano_habitability: "Tundra Habitability"
+ trait_pc_pd_cryovolcano_preference: "Tundra Preference"
+ trait_pc_pd_cryovolcano_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cryoflora: "Мир криофлоры"
  pc_pd_cryoflora_desc: "Холодный каменистый мир с азотно-кислородной атмосферой. Хоть температура ниже нуля, флора и фауна приспособились к ней с помощью белков-антифризов и образовали богатую, живую экосистему."
  pc_pd_cryoflora_adj: "криофлорная"
