--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -109,6 +109,8 @@
  pd_sandstone_desc: "这里有着广袤的草原和风蚀砂岩构造。水圈维系着顽强的草本植物，后者已然适应这里的环境。"
  pd_turquoise: "绿松石世界"
  pd_turquoise_desc: "这颗亚热带草原星球上分布着密集的绿松石矿床，在地表几乎随处可见。"
+ pd_calcite: "$pc_pd_calcite$"
+ pd_calcite_desc: "$pc_pd_calcite_desc$"
  pd_supercontinent: "超大陆世界"
  pd_supercontinent_desc: "板块构造还处于单一的超大陆状态。临近沿海的地区拥有繁茂的草木，内陆的环境则截然不同，由草原逐渐过渡为庞大的干燥荒漠。"
  pd_sinkhole: "地陷世界"
@@ -163,6 +165,8 @@
  pd_basalt_desc: "此地季节差异不太明显。断断续续的火山活动，产生了广袤的熔岩原。苔藓和地衣扎根在这些冷却下来的玄武岩上，存在有稳定的生物圈。"
  pd_tuya: "平顶火山世界"
  pd_tuya_desc: "此地季节间差异不太明显，冬季漫长而严酷。得益于火山土中的营养物质，存在着稳定的生物圈。冰下火山星罗棋布。"
+ pd_cryovolcano: "Cryovolcano World"
+ pd_cryovolcano_desc: "Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
  pd_cryoflora: "冰雪植物世界"
  pd_cryoflora_desc: "气温经常低至冰点以下，水主要以冰雪的形式存在。尽管如此，此地的动植物却演化出抗冻蛋白，因而发展出富有生机和活力的生态系统。"
  pd_lichen: "地衣世界"
