--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
@@ -293,6 +293,12 @@
  mod_pc_pd_turquoise_habitability: "Savannah Habitability"
  trait_pc_pd_turquoise_preference: "Savannah Preference"
  trait_pc_pd_turquoise_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_calcite: "Calcite World"
+ pc_pd_calcite_desc: "This savannah planet is dotted with towering, spiky calcite rock formations. The calcite enriches the soil, creating ideal conditions for grasses and other flora."
+ pc_pd_calcite_adj: "sharded"
+ mod_pc_pd_calcite_habitability: "Savannah Habitability"
+ trait_pc_pd_calcite_preference: "Savannah Preference"
+ trait_pc_pd_calcite_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_supercontinent: "Mundo Supercontinental"
  pc_pd_supercontinent_desc: "Mundo rochoso de pastagens e desertos com uma atmosfera de nitrogênio-oxigênio, as placas tectônicas deste planeta estão atualmente no estado de um supercontinente. As áreas costeiras imediatas são exuberantes, mas grande parte do terreno interior é constituído por pastagens que lentamente se transformam em grandes desertos áridos."
  pc_pd_supercontinent_adj: "supercontinental"
@@ -443,6 +449,12 @@
  mod_pc_pd_tuya_habitability: "Habitabilidade de Tundra"
  trait_pc_pd_tuya_preference: "Preferência por Tundra"
  trait_pc_pd_tuya_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_cryovolcano: "Cryovolcano World"
+ pc_pd_cryovolcano_desc: "A frigid, rocky planet with a nitrogen-oxygen atmosphere. Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
+ pc_pd_cryovolcano_adj: "cryovolcanic"
+ mod_pc_pd_cryovolcano_habitability: "Tundra Habitability"
+ trait_pc_pd_cryovolcano_preference: "Tundra Preference"
+ trait_pc_pd_cryovolcano_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cryoflora: "Mundo Crioflora"
  pc_pd_cryoflora_desc: "Mundo frio e rochoso com atmosfera de nitrogênio-oxigênio. Embora as temperaturas estejam frequentemente abaixo de zero, a maior parte da hidrosfera está presa em neve e gelo. Apesar disso, a flora e a fauna deste planeta adaptaram-se através de proteínas anticongelantes para criar um ecossistema exuberante e vibrante."
  pc_pd_cryoflora_adj: "brilhante"
