--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
@@ -122,6 +122,8 @@
  pd_sandstone_desc: "Este planeta possui vastas pastagens e formações de arenito esculpidas pelo vento. A sua hidrosfera suporta gramíneas resilientes adaptadas para prosperar neste ambiente."
  pd_turquoise: "$pc_pd_turquoise$"
  pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
+ pd_calcite: "$pc_pd_calcite$"
+ pd_calcite_desc: "$pc_pd_calcite_desc$"
  pd_supercontinent: "Mundo Supercontinental"
  pd_supercontinent_desc: "Este planeta possui atualmente um supercontinente devido às suas placas tectônicas. As áreas costeiras são exuberantes, enquanto o terreno interior transita de pastagens para grandes desertos áridos."
  pd_sinkhole: "Mundo Sumidouro"
@@ -182,6 +184,8 @@
  pd_basalt_desc: "As estações estáveis ​​prevalecem neste planeta, onde a atividade vulcânica intermitente cria extensos campos de lava. Musgos e liquens que prosperam no basalto resfriado sustentam a biosfera."
  pd_tuya: "Mundo Tuya"
  pd_tuya_desc: "Com estações limitadas e invernos rigorosos, a biosfera estável deste mundo prospera com os nutrientes do solo vulcânico, e vulcões subglaciais pontilham a superfície."
+ pd_cryovolcano: "Cryovolcano World"
+ pd_cryovolcano_desc: "Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
  pd_cryoflora: "Mundo Crioflora"
  pd_cryoflora_desc: "A hidrosfera do planeta está quase toda congelada, com as temperaturas raramente subindo acima de zero. No entanto, a flora e a fauna adaptaram-se às proteínas anticongelantes, criando um belo ecossistema brilhante."
  pd_lichen: "Mundo Líquen"
