--- a/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
@@ -305,6 +305,12 @@
  mod_pc_pd_turquoise_habitability: "Bewohnbarkeit (Savanne)"
  trait_pc_pd_turquoise_preference: "Anpassung (Savanne)"
  trait_pc_pd_turquoise_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_calcite: "Calcite World"
+ pc_pd_calcite_desc: "This savannah planet is dotted with towering, spiky calcite rock formations. The calcite enriches the soil, creating ideal conditions for grasses and other flora."
+ pc_pd_calcite_adj: "sharded"
+ mod_pc_pd_calcite_habitability: "Savannah Habitability"
+ trait_pc_pd_calcite_preference: "Savannah Preference"
+ trait_pc_pd_calcite_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_supercontinent: "Superkontinent Welt"
  pc_pd_supercontinent_desc: "Felsige Welt aus Grasland und Wüsten mit einer Stickstoff-Sauerstoff-Atmosphäre. Die Plattentektonik dieses Planeten befindet sich derzeit im Zustand eines Superkontinents. Die unmittelbaren Küstengebiete sind üppig, aber ein Großteil des Landesinneren besteht aus Grasland, das sich langsam in große, trockene Wüsten verwandelt."
  pc_pd_supercontinent_adj: "superkontinental"
@@ -455,6 +461,12 @@
  mod_pc_pd_tuya_habitability: "Bewohnbarkeit (Tundra)"
  trait_pc_pd_tuya_preference: "Anpassung (Tundra)"
  trait_pc_pd_tuya_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_cryovolcano: "Cryovolcano World"
+ pc_pd_cryovolcano_desc: "A frigid, rocky planet with a nitrogen-oxygen atmosphere. Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
+ pc_pd_cryovolcano_adj: "cryovolcanic"
+ mod_pc_pd_cryovolcano_habitability: "Tundra Habitability"
+ trait_pc_pd_cryovolcano_preference: "Tundra Preference"
+ trait_pc_pd_cryovolcano_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cryoflora: "Kryflora Welt"
  pc_pd_cryoflora_desc: "Kalte und felsige Welt mit einer Stickstoff-Sauerstoff-Atmosphäre. Während die Temperaturen oft unter dem Gefrierpunkt liegen, ist der Großteil der Hydrosphäre von Schnee und Eis umgeben. Trotzdem haben sich die Flora und Fauna dieses Planeten mithilfe von Frostschutzproteinen angepasst und ein üppiges, lebendiges Ökosystem geschaffen."
  pc_pd_cryoflora_adj: "leuchtend"
