--- a/planetary_diversity/localisation/german/planetarydiversity_vanilla_overwrites_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_vanilla_overwrites_l_german.yml
@@ -1,4 +1,4 @@
 ﻿l_german:
 
-#Überschriebener Vanilla-Standort
-mod_planet_bureaucrats_unity_produces_mult:1 "£unity£ $unity$ von [GetAdministratorPluralWithIcon]"
+#Overwritten Vanilla Loc
+ mod_planet_bureaucrats_unity_produces_mult:1 "£unity£ $unity$ from [GetAdministratorPluralWithIcon]"
