--- a/planetary_diversity/localisation/japanese/planetarydiversity_planet_classes_l_japanese.yml
+++ b/planetary_diversity/localisation/japanese/planetarydiversity_planet_classes_l_japanese.yml
@@ -305,6 +305,12 @@
  mod_pc_pd_turquoise_habitability: "Savannah Habitability"
  trait_pc_pd_turquoise_preference: "Savannah Preference"
  trait_pc_pd_turquoise_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_calcite: "Calcite World"
+ pc_pd_calcite_desc: "This savannah planet is dotted with towering, spiky calcite rock formations. The calcite enriches the soil, creating ideal conditions for grasses and other flora."
+ pc_pd_calcite_adj: "sharded"
+ mod_pc_pd_calcite_habitability: "Savannah Habitability"
+ trait_pc_pd_calcite_preference: "Savannah Preference"
+ trait_pc_pd_calcite_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_supercontinent: "Supercontinent World"
  pc_pd_supercontinent_desc: "Rocky world of grasslands and deserts with a nitrogen-oxygen atmosphere, this planet's plate tectonics is currently in the state of a supercontinent. Immediate coastal areas are lush, but much of the inland terrain is grasslands which slowly turn into large arid deserts."
  pc_pd_supercontinent_adj: "supercontinental"
@@ -455,6 +461,12 @@
  mod_pc_pd_tuya_habitability: "Tundra Habitability"
  trait_pc_pd_tuya_preference: "Tundra Preference"
  trait_pc_pd_tuya_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_cryovolcano: "Cryovolcano World"
+ pc_pd_cryovolcano_desc: "A frigid, rocky planet with a nitrogen-oxygen atmosphere. Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
+ pc_pd_cryovolcano_adj: "cryovolcanic"
+ mod_pc_pd_cryovolcano_habitability: "Tundra Habitability"
+ trait_pc_pd_cryovolcano_preference: "Tundra Preference"
+ trait_pc_pd_cryovolcano_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cryoflora: "Cryflora World"
  pc_pd_cryoflora_desc: "Cold and rocky world with a nitrogen-oxygen atmosphere. While temperatures are often below freezing, most of the hydrosphere is locked in snow and ice. Despite this, the flora and fauna of this planet have adapted via antifreeze proteins to create a lush, vibrant ecosystem."
  pc_pd_cryoflora_adj: "glowing"
