--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
@@ -305,6 +305,12 @@
  mod_pc_pd_turquoise_habitability: "Savannah Habitability"
  trait_pc_pd_turquoise_preference: "Savannah Preference"
  trait_pc_pd_turquoise_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_calcite: "Calcite World"
+ pc_pd_calcite_desc: "This savannah planet is dotted with towering, spiky calcite rock formations. The calcite enriches the soil, creating ideal conditions for grasses and other flora."
+ pc_pd_calcite_adj: "sharded"
+ mod_pc_pd_calcite_habitability: "Savannah Habitability"
+ trait_pc_pd_calcite_preference: "Savannah Preference"
+ trait_pc_pd_calcite_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_supercontinent: "초대륙 행성"
  pc_pd_supercontinent_desc: "대기가 질소와 산소로 조성되었으며 초원과 사막으로 구성된 암석형 행성입니다. 이 행성의 판구조학은 현재 초대륙의 상태에 있습니다. 가까운 해안 지역은 울창하지만 내륙 지형의 대부분은 초원이며, 서서히 건조한 사막으로 변해가고 있습니다."
  pc_pd_supercontinent_adj: "초대륙의"
@@ -455,6 +461,12 @@
  mod_pc_pd_tuya_habitability: "동토 행성 거주 적합도"
  trait_pc_pd_tuya_preference: "동토 행성 선호"
  trait_pc_pd_tuya_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_cryovolcano: "Cryovolcano World"
+ pc_pd_cryovolcano_desc: "A frigid, rocky planet with a nitrogen-oxygen atmosphere. Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
+ pc_pd_cryovolcano_adj: "cryovolcanic"
+ mod_pc_pd_cryovolcano_habitability: "Tundra Habitability"
+ trait_pc_pd_cryovolcano_preference: "Tundra Preference"
+ trait_pc_pd_cryovolcano_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cryoflora: "얼음꽃 행성"
  pc_pd_cryoflora_desc: "대기가 질소와 산소로 조성된 차가운 암석형 행성입니다. 기온이 영하로 떨어지는 경우가 많지만 대부분의 수권은 눈과 얼음에 갇혀 있습니다. 그럼에도 불구하고 행성의 동식물은 부동액 단백질을 통해 적응하여 무성하고 활기찬 생태계를 만들어 냈습니다."
  pc_pd_cryoflora_adj: "빛나는"
