--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
@@ -305,6 +305,12 @@
  mod_pc_pd_turquoise_habitability: "Savannah Habitability"
  trait_pc_pd_turquoise_preference: "Savannah Preference"
  trait_pc_pd_turquoise_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_calcite: "Calcite World"
+ pc_pd_calcite_desc: "This savannah planet is dotted with towering, spiky calcite rock formations. The calcite enriches the soil, creating ideal conditions for grasses and other flora."
+ pc_pd_calcite_adj: "sharded"
+ mod_pc_pd_calcite_habitability: "Savannah Habitability"
+ trait_pc_pd_calcite_preference: "Savannah Preference"
+ trait_pc_pd_calcite_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_supercontinent: "Świat superkontynentalny"
  pc_pd_supercontinent_desc: "Skalisty świat łąk i pustyń z atmosferą azotowo-tlenową, tektonika płyt tej planety znajduje się obecnie w stanie superkontynentu. Bezpośrednie obszary przybrzeżne są bujne, ale większość terenu śródlądowego to łąki, które powoli zamieniają się w duże, jałowe pustynie."
  pc_pd_supercontinent_adj: "superkontynentalny"
@@ -455,6 +461,12 @@
  mod_pc_pd_tuya_habitability: "Możliwość zamieszkania świata tundrowego"
  trait_pc_pd_tuya_preference: "Preferowany teren: tundra"
  trait_pc_pd_tuya_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_cryovolcano: "Cryovolcano World"
+ pc_pd_cryovolcano_desc: "A frigid, rocky planet with a nitrogen-oxygen atmosphere. Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
+ pc_pd_cryovolcano_adj: "cryovolcanic"
+ mod_pc_pd_cryovolcano_habitability: "Tundra Habitability"
+ trait_pc_pd_cryovolcano_preference: "Tundra Preference"
+ trait_pc_pd_cryovolcano_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cryoflora: "Świat kryształowy"
  pc_pd_cryoflora_desc: "Zimny ​​i skalisty świat z atmosferą azotowo-tlenową. Podczas gdy temperatury często spadają poniżej zera, większość hydrosfery jest zamknięta w śniegu i lodzie. Mimo to flora i fauna tej planety przystosowały się poprzez białka zapobiegające zamarzaniu, tworząc bujny, tętniący życiem ekosystem."
  pc_pd_cryoflora_adj: "glowing"
