--- a/planetary_diversity/localisation/russian/planetarydiversity_engine_events_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_engine_events_l_russian.yml
@@ -57,6 +57,7 @@
  pdengine.21.aspen: "$pc_pd_aspen$"
  pdengine.21.sandstone: "$pc_pd_sandstone$"
  pdengine.21.turquoise: "$pc_pd_turquoise$"
+ pdengine.21.calcite: "$pc_pd_calcite$"
  pdengine.21.prairie: "$pc_pd_prairie$"
  pdengine.21.supercontinent: "$pc_pd_supercontinent$"
  pdengine.21.sinkhole: "$pc_pd_sinkhole$"
@@ -85,6 +86,7 @@
  pdengine.21.mud: "$pc_pd_mud$"
  pdengine.21.basalt: "$pc_pd_basalt$"
  pdengine.21.tuya: "$pc_pd_tuya$"
+ pdengine.21.cryovolcano: "$pc_pd_cryovolcano$"
  pdengine.21.cryoflora: "$pc_pd_cryoflora$"
  pdengine.21.lichen: "$pc_pd_lichen$"
 
