--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
@@ -55,6 +55,7 @@
  pdengine.21.aspen: "$pc_pd_aspen$"
  pdengine.21.sandstone: "$pc_pd_sandstone$"
  pdengine.21.turquoise: "$pc_pd_turquoise$"
+ pdengine.21.calcite: "$pc_pd_calcite$"
  pdengine.21.prairie: "$pc_pd_prairie$"
  pdengine.21.supercontinent: "$pc_pd_supercontinent$"
  pdengine.21.sinkhole: "$pc_pd_sinkhole$"
@@ -83,6 +84,7 @@
  pdengine.21.mud: "$pc_pd_mud$"
  pdengine.21.basalt: "$pc_pd_basalt$"
  pdengine.21.tuya: "$pc_pd_tuya$"
+ pdengine.21.cryovolcano: "$pc_pd_cryovolcano$"
  pdengine.21.cryoflora: "$pc_pd_cryoflora$"
  pdengine.21.lichen: "$pc_pd_lichen$"
  pdengine.24.name: "盖亚星球改造完成"
