--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -293,6 +293,12 @@
  mod_pc_pd_turquoise_habitability: "草原星球宜居性"
  trait_pc_pd_turquoise_preference: "草原星球偏好"
  trait_pc_pd_turquoise_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_calcite: "Calcite World"
+ pc_pd_calcite_desc: "This savannah planet is dotted with towering, spiky calcite rock formations. The calcite enriches the soil, creating ideal conditions for grasses and other flora."
+ pc_pd_calcite_adj: "sharded"
+ mod_pc_pd_calcite_habitability: "Savannah Habitability"
+ trait_pc_pd_calcite_preference: "Savannah Preference"
+ trait_pc_pd_calcite_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_supercontinent: "超大陆星球"
  pc_pd_supercontinent_desc: "拥有氮氧大气的岩石星球，陆地的主要环境是沙漠和草原，板块构造还处于单一的超大陆状态。临近沿海的地区拥有繁茂的草木，内陆的环境则截然不同，由草原逐渐过渡为庞大的干燥荒漠。"
  pc_pd_supercontinent_adj: "超大陆"
@@ -437,6 +443,12 @@
  mod_pc_pd_tuya_habitability: "苔原星球宜居性"
  trait_pc_pd_tuya_preference: "苔原星球偏好"
  trait_pc_pd_tuya_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_cryovolcano: "Cryovolcano World"
+ pc_pd_cryovolcano_desc: "A frigid, rocky planet with a nitrogen-oxygen atmosphere. Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
+ pc_pd_cryovolcano_adj: "cryovolcanic"
+ mod_pc_pd_cryovolcano_habitability: "Tundra Habitability"
+ trait_pc_pd_cryovolcano_preference: "Tundra Preference"
+ trait_pc_pd_cryovolcano_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cryoflora: "冰雪植物星球"
  pc_pd_cryoflora_desc: "拥有氮氧大气的寒冷岩石星球。气温经常低至冰点以下，水主要以冰雪的形式存在。尽管如此，此地的动植物却演化出抗冻蛋白，因而发展出富有生机和活力的生态系统。"
  pc_pd_cryoflora_adj: "活跃"
