--- a/planetary_diversity/localisation/spanish/planetarydiversity_planet_modifiers_l_spanish.yml
+++ b/planetary_diversity/localisation/spanish/planetarydiversity_planet_modifiers_l_spanish.yml
@@ -122,6 +122,8 @@
  pd_sandstone_desc: "This planet boasts vast grasslands and wind-carved sandstone formations. Its hydrosphere supports resilient grasses adapted to thrive in this environment."
  pd_turquoise: "$pc_pd_turquoise$"
  pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
+ pd_calcite: "$pc_pd_calcite$"
+ pd_calcite_desc: "$pc_pd_calcite_desc$"
  pd_supercontinent: "Supercontinent World"
  pd_supercontinent_desc: "This planet currently has a supercontinent due to its plate tectonics. Coastal areas are lush, while inland terrain transitions from grasslands to large arid deserts."
  pd_sinkhole: "Sinkhole World"
@@ -182,6 +184,8 @@
  pd_basalt_desc: "Steady seasons prevail on this planet, where intermittent volcanic activity creates extensive lava fields. Mosses and lichens thriving on the cooled basalt sustain the biosphere."
  pd_tuya: "Tuya World"
  pd_tuya_desc: "With limited seasons and harsh winters, this world's stable biosphere thrives on volcanic soil nutrients, and subglacial volcanoes dot the surface."
+ pd_cryovolcano: "Cryovolcano World"
+ pd_cryovolcano_desc: "Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
  pd_cryoflora: "Cryflora World"
  pd_cryoflora_desc: "The planet's hydrosphere is mostly frozen, with temperatures rarely rising above freezing. Nevertheless, the flora and fauna have adapted with antifreeze proteins, creating a beautiful glowing ecosystem."
  pd_lichen: "Lichen World"
